# cryptobot

./: CMakeLists.txt
include/: Application.hpp  Common.hpp  Utils.hpp
include/components/: Data.hpp  GuiEvent.hpp
include/systems/: DataConsoleDisplayer.hpp  DataExploiter.hpp  DataGraphicDisplayer.hpp  DataRetriever.hpp  ScriptedSystem.hpp  ThreadedSystem.hpp
scripts/: config.chai
scripts/dataexploiter/: configure.chai  update.chai
src/: Application.cpp  Utils.cpp  main.cpp
src/systems/: DataConsoleDisplayer.cpp  DataExploiter.cpp  DataGraphicDisplayer.cpp  DataRetriever.cpp
